--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,13 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1642.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "install": "^0.13.0",
-    "mariadb": "^2.5.5",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.3",
     "redis": "^4.6.14"
   }
 }
